# rust-ffmpeg

./: .gitignore  Cargo.toml  README.md
examples/: Cargo.toml  format.rs  generate.rs  snapshot.rs
ffmpeg/: Cargo.toml
ffmpeg/src/codec/: id.rs
ffmpeg/src/codec/encoder/: encoder.rs
ffmpeg/src/codec/packet/: side_data.rs
ffmpeg/src/software/resampling/: context.rs
ffmpeg/src/util/format/: pixel.rs
src/codec/: id.rs  picture.rs
src/codec/encoder/: video.rs
src/codec/packet/: side_data.rs
src/codec/subtitle/: mod.rs
src/device/: input.rs  output.rs
src/format/context/: output.rs
src/util/: error.rs
src/util/color/: primaries.rs  space.rs
src/util/format/: pixel.rs  sample.rs
src/util/frame/: side_data.rs  video.rs
